[project]
name = "telnetlib_312_and_up"  # Required
version = "3.13.1"  # Required
description = "A sample Python project"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.12"
keywords = ["telnet"]  # Optional

authors = [
  {name = "Guido van Rossum", email = "guido@python.org" } # Optional
]

maintainers = [
  {name = "Roman A. Taycher", email = "maintainer@example.com" } # Optional
]

classifiers = [  
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
