[project]
name = "telnetlib_313_and_up"  # Required
version = "3.13.1"  # Required
description = "copy of telnetlib for python 3.13+"
readme = "README.md" # Optional
requires-python = ">=3.13"
keywords = ["telnet"]  # Optional

authors = [
  {name = "Guido van Rossum", email = "guido@python.org" }
]

maintainers = [
  {name = "Roman A. Taycher", email = " rtaycher.devmail@gmail.com " }
]

classifiers = [  
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
